--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 USERNAME=postgres
-PASSWORD=happyhacker46$$$
+PASSWORD=password
 HOST=localhost
-DATABASE=chat_app_db
+DATABASE=cas_chat_app_db
 TOKEN_SECRET=hysugjwduvzujfbkpelfdzewmwadmhei
 
